--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Neon - React Template</title>
+    <title>FlipX</title>
 </head>
 
 <body class="has-animations">
