--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,25 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+
+    <!-- Primary Meta Tags -->
+    <title>FlipX</title>
+    <meta name="title" content="FlipX">
+    <meta name="description" content="FlipX - flip homes from home">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://flipx.io/">
+    <meta property="og:title" content="FlipX">
+    <meta property="og:description" content="FlipX - flip homes from home">
+    <meta property="og:image" content="https://flipx.io/small_logo.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://flipx.io/">
+    <meta property="twitter:title" content="FlipX">
+    <meta property="twitter:description" content="FlipX - flip homes from home">
+    <meta property="twitter:image" content="https://flipx.io/small_logo.png">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
